// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test welcome page should render setDBpassword page correctly 1`] = `
"<link rel=\\"stylesheet\\" href=\\"https://cdn.jsdelivr.net/npm/open-fonts@1.1.1/fonts/inter.min.css\\">
<link rel=\\"stylesheet\\" href=\\"https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css\\">
<style>
    *{
        text-align:center;
    }
    input {
        height:40px;
        margin-top:300px;   
    }
    button{
        height: 40px;   
    }
    .container {
        width: 450px;
        margin: auto;
    }
    .body{
        margin:10px;
        height:700px;
        border: 1px solid rgba(0,0,0,0.5);
        background:rgba(220,220,220,0.5)
    }
</style>
<main>
    <div class=\\"container\\">
        <div class=\\"header\\">
            <h1 class=\\"title\\">Database Setup</h1>
        </div>
        <div class=\\"body\\">
            <input class=\\"dbPassword\\" placeholder=\\"password\\">
            <button class=\\"setButton\\">Set</button>
        </div>
    </div>
</main>
<script>
    const dbPassword = document.querySelector('.dbPassword')
    const setButton = document.querySelector('.setButton')

    setButton.addEventListener('click',()=>{
        fetch('/api/users/:id',{
            method:\\"PATCH\\",
            headers:{
                'Content-Type': 'application/json'
            },
            body:JSON.stringify({
                password:dbPassword.value
            })
        }).then(r=>r.json()).then(r=>{
            return location.href = '/databases'
        })
    })
</script>
"
`;

exports[`test welcome page should render setPassword page correctly 1`] = `
"<link rel=\\"stylesheet\\" href=\\"https://cdn.jsdelivr.net/npm/open-fonts@1.1.1/fonts/inter.min.css\\">
<link rel=\\"stylesheet\\" href=\\"https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css\\">

<style>
    * {
        text-align: center;
    }
    input {
        width: 400px;
        height: 40px;
        margin: 5px;
    }
    button {
        width: 400px;
        height: 40px;
        margin: 10px;
    }
    .card {
        width: 450px;
        margin: auto;
    }
    .subtitle {
        margin: 10px;
    }
    .body {
        margin: 10px;
    }
</style>

<main>
    <div class=\\"card\\">
        <div class=\\"head\\">
            <h1 class=\\"title\\">Learn Databases</h1>
        </div>
        <div class=\\"body\\">
            <div class=\\"subtitle\\">Set your password</div>
            <input class=\\"password1\\" placeholder=\\"create new password\\" type=\\"password\\"/><br>
            <input class=\\"password2\\" placeholder=\\"confirm password\\" type=\\"password\\"/>
            <button class=\\"submit\\">Submit</button>
        </div>
        <div class=\\"tale\\">
            <div>Didn't recieve email? <a href=\\"#\\" class=\\"resend\\">Send Again</a></div>
        </div>
    </div>
</main>

<script>
    const path = window.location.pathname.split('/')
    const token = path.pop()
    const id = path.pop()
    console.log('path is', path)
    console.log('toekn is', token)
    console.log('userid is', id)

    const password1 = document.querySelector('.password1')
    const password2 = document.querySelector('.password2')
    const submit = document.querySelector('.submit')
    const resend = document.querySelector('.resend')

    submit.addEventListener('click', () => {
        if (password1.value !== password2.value) {
            return alert(\\"Passwords do not match. Please check again.\\")
        }
        fetch('/api/passwordReset', {
            method: \\"POST\\",
            headers: {
                'Content-Type': 'application/json'
            },
            body: JSON.stringify({
                token: token,
                password: password1.value
            })
        }).then(r => r.json()).then((r) => {
            if (r.error) return alert(r.error.message)
            fetch('/api/session', {
                method: \\"POST\\",
                headers: {
                    'Content-Type': 'application/json'
                },
                body: JSON.stringify({
                    username: r.username,
                    password: r.password
                })
            }).then((r) => {
                return location.href = '/setDBPassword'
            }).catch((err) => {
                alert(\\"Password is set but login has failed. Please try again.\\", err)
            })
        }).catch((err) => {
            alert(\\"Setting password has failed. Please try again.\\", err)
        })
    })

    resend.addEventListener('click', () => {
        fetch('/api/notifications', {
            method: 'POST',
            headers: {
                'Content-Type': 'application/json'
        },
        body: JSON.stringify({
                id: id
            })
        }).then((r) => {
            alert(\\"Check your email and re-connect to this page by clicking the link on the mail.\\")
        }).catch((err) => {
            alert(\\"Sending email has failed. Please try again.\\", err)
        })
    })
</script>

"
`;

exports[`test welcome page should render sign in page correctly 1`] = `
"<link rel=\\"stylesheet\\" href=\\"https://cdn.jsdelivr.net/npm/open-fonts@1.1.1/fonts/inter.min.css\\">
<link rel=\\"stylesheet\\" href=\\"https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css\\">

<style>
    * {
        text-align: center;
    }
    input {
        width: 400px;
        height: 40px;
        margin: 5px;
    }
    button {
        width: 400px;
        height: 40px;
        margin: 10px;
    }
    .card {
        width: 450px;
        margin: auto;
    }
    .subtitle {
        margin: 10px;
    }
    .body {
        margin: 10px;
    }
</style>

<main>
    <div class=\\"card\\">
        <div class=\\"head\\">
            <h1 class=\\"title\\">Learn Databases</h1>
        </div>
        <div class=\\"body\\">
            <div class=\\"subtitle\\">Please log in</div>
            <input class=\\"username\\" placeholder=\\"username\\" /><br>
            <input class=\\"password\\" placeholder=\\"password\\" type=\\"password\\"/>
            <button class=\\"submit\\">Submit</button>
        </div>
        <div class=\\"tale\\">
            <div>Forgot Password? <a href=\\"#\\">Find Password</a></div>
            <div>Don't have account? <a href=\\"/signup\\">Sign Up</a></div>
        </div>
    </div>
</main>

<script>
    const username = document.querySelector('.username')
    const password = document.querySelector('.password')
    const submit = document.querySelector('.submit')

    submit.addEventListener('click', () => {
        fetch('/api/session', {
            method: \\"POST\\",
            headers: {
                'Content-Type': 'application/json'
            },
            body: JSON.stringify({
                username: username.value,
                password: password.value
            })
        }).then(r => r.json()).then((r) => {
            if (r.dbPassword) return location.href = '/setDBPassword' //path name is not decided yet  
            return location.href = '/databases' //path name is not decided yet
        })
    })
</script>

"
`;

exports[`test welcome page should render sign up page correctly 1`] = `
"<link rel=\\"stylesheet\\" href=\\"https://cdn.jsdelivr.net/npm/open-fonts@1.1.1/fonts/inter.min.css\\">
<link rel=\\"stylesheet\\" href=\\"https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css\\">


<style>
    * {
        text-align: center;
    }
    input {
        width: 400px;
        height: 40px;
        margin: 5px;
    }
    button {
        width: 400px;
        height: 40px;
        margin: 10px;
    }
    .body {
        margin: 10px;
    }
</style>

<h1>Learn Databases</h1>

<p>Create Account</p>

<div>
  <input
    class=\\"email\\"
    type=\\"email\\"
    placeholder=\\"Email Address\\"
    required
    />
</div>

<div>
  <input
    class=\\"username\\"
    type=\\"text\\"
    placeholder=\\"Username\\"
    required
    />
</div>

<div>
  <button class=\\"submit\\">Create Account</button>
</div>

<div>
  Already have an account? <a href=\\"/signin\\">Login</a>
</div>

<script>
  const submit = document.querySelector('.submit');
  const check = document.querySelector('.check');
  const username = document.querySelector('.username')
  const email = document.querySelector('.email')

  submit.addEventListener('click', () => {
    alert(\\"Check your email and set your password\\")
    fetch('/api/users', {
      method: 'POST',
      headers: {
        'Content-Type': 'application/json'
      },
      body: JSON.stringify({
        username: username.value,
        email: email.value
      })
    }).then(r => r.json()).then(() => {
      return location.href = '/signin'
    })
  })
</script>
"
`;

exports[`test welcome page should render welcome page correctly 1`] = `
"<!DOCTYPE html>
 <html lang=\\"en\\">
     <head>
         <meta charset='UTF-8'>
         <title></title>
     </head>
     <body>
         <h1>Welcome to learndb.dev</h1>
     </body>
 </html> 
"
`;
